<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SingUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">SUBMIT</string>
    <string name="username_label">Username:</string>
    <string name="user">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_entered">Please enter you password</string>
    <string name="confirm_label">Confirm</string>
    <string name="password_confirm">Please confirm password</string>

</resources>
